--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/connect-redis": "^0.0.18",
         "@types/express": "^4.17.13",
-        "@types/express-session": "^1.17.4",
+        "@types/express-session": "1.17.1",
         "@types/graphql": "^14.5.0",
         "@types/node": "^17.0.30",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
@@ -35,7 +35,7 @@
         "connect-redis": "^6.1.3",
         "eslint-config-prettier": "^8.5.0",
         "express": "^4.18.1",
-        "express-session": "^1.17.2",
+        "express-session": "1.17.0",
         "graphql": "15.3.0",
         "pg": "^8.7.3",
         "prettier": "^2.6.2",
