--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/express": "^4.17.13",
         "@types/express-session": "1.17.1",
         "@types/graphql": "^14.5.0",
+        "@types/ioredis": "^4.28.10",
         "@types/node": "^17.0.30",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.22.0",
@@ -37,6 +38,7 @@
         "express": "^4.18.1",
         "express-session": "1.17.0",
         "graphql": "15.3.0",
+        "ioredis": "^5.0.4",
         "pg": "^8.7.3",
         "prettier": "^2.6.2",
         "redis": "^4.1.0",
